# technetope.github.io

./: .gitignore  README.md  artists.html  index.html  technical.html  workingflow.md
acoustics/: README.md
acoustics/agents/agent_B/: README.md
acoustics/archive/mother_mf/tools/: run_mother_mf.sh
acoustics/docs/: device_setup.md  gui_dashboard_requirements.md  osc_contract.md  pc_workflow.md  troubleshooting.md
acoustics/firmware/: platformio.ini
acoustics/firmware/data/: manifest.json
acoustics/firmware/include/: Secrets.example.h
acoustics/firmware/src/: main.cpp
acoustics/firmware/src/modules/: AudioPlayer.cpp  AudioPlayer.h  OscReceiver.cpp  OscReceiver.h  PlaybackQueue.cpp  PlaybackQueue.h  PresetStore.cpp  PresetStore.h
acoustics/pc_tools/gui/src/: main.cpp
acoustics/pc_tools/libs/include/acoustics/osc/: OscPacket.h
acoustics/pc_tools/libs/src/: OscPacket.cpp
acoustics/pc_tools/monitor/: CMakeLists.txt
acoustics/pc_tools/monitor/src/: main.cpp
acoustics/pc_tools/scheduler/: CMakeLists.txt
acoustics/pc_tools/scheduler/examples/: basic_timeline.json  mother_mf_a_section.json
acoustics/pc_tools/scheduler/include/acoustics/scheduler/: SoundTimeline.h
acoustics/pc_tools/scheduler/src/: SoundTimeline.cpp
acoustics/sound_assets/: manifest.json
acoustics/tests/: README.md
acoustics/tests/test01/: targets copy.json
acoustics/tools/timeline/: generate_mother_mf_timeline.py
docs/acoustics/: masterdocs.md
locomotion/: visualize.pde
locomotion/calibration/: CMakeLists.txt  HUMAN_DETECTION_COMPUTATION.md  HUMAN_DETECTION_USAGE.md  README.md  REQUIREMENTS_CALIBRATION_V2.md  STATUS.md  TESTING.md  VELOCITY_COMPUTATION_IMPROVEMENTS.md  calibration_config.json  calibration_config_low_res.json  capture_calibration_interactive_requirements.md  implementation_requirements.md
locomotion/calibration/config/: calibration_config.json  human_detection_monitor.json  toio_playmat.json
locomotion/calibration/include/locomotion/calibration/: CalibrationPipeline.h  CalibrationResult.h  CalibrationSession.h  FloorPlaneEstimator.h  HumanDetectionConverter.h  HumanDetector.h  PlaymatLayout.h  ToioCoordinateTransform.h
locomotion/calibration/src/: CalibrationPipeline.cpp  CalibrationSession.cpp  FloorPlaneEstimator.cpp  HumanDetectionConverter.cpp  HumanDetector.cpp  PlaymatLayout.cpp  ToioCoordinateTransform.cpp
locomotion/calibration/test/: test_calibration_pipeline_integration.cpp  test_floor_plane_estimator.cpp  test_utils.h
locomotion/calibration/tools/: calibrate_intrinsics.cpp  capture_calibration.cpp  capture_calibration_interactive.cpp  monitor_human_detection.cpp  run_calibration_qc.cpp
m5-toio/firmware/doc/: goal_tracker_spec.md  toio_controller_spec.md  ui_spec.md
m5-toio/firmware/src/: main.cpp
m5-toio/firmware/src/controller/: toio_controller.cpp  toio_controller.h
m5-toio/firmware/src/goal_tracker/: cube_pose.h  goal_tracker.cpp  goal_tracker.h
m5-toio/firmware/src/ui/: ui_helpers.cpp
state/: devices.json
swarm/: pyproject.toml
swarm/cpp_client/: CMakeLists.txt  New_develop.md  README.md  config.yaml
swarm/cpp_client/configs/: config.yaml
swarm/cpp_client/docs/: coding_guidelines.md  middleware.md  middleware_cli.md  transport.md
swarm/cpp_client/include/toio/api/: fleet_control.hpp
swarm/cpp_client/include/toio/control/: goal_controller.hpp
swarm/cpp_client/include/toio/middleware/: cube_state.hpp  fleet_manager.hpp  server_session.hpp
swarm/cpp_client/include/toio/transport/: toio_client.hpp
swarm/cpp_client/samples/: New_develop.md  circle_motion_sample.cpp  fleet_control_sample.cpp
swarm/cpp_client/src/: main.cpp
swarm/cpp_client/src/api/: fleet_control.cpp
swarm/cpp_client/src/control/: goal_controller.cpp
swarm/cpp_client/src/middleware/: fleet_manager.cpp  server_session.cpp
swarm/cpp_client/src/transport/: toio_client.cpp
swarm/relay_server/: RaspberryPiの初期設定.md
swarm/web_cliant/: field_view.html  webgui.html
swarm/ws-cliant/: webgui.html
