[project]
name = "swarm"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    # mac専用
    "appnope==0.1.4; sys_platform == 'darwin'",
    "asttokens==3.0.0",
    "bleak==1.1.1",
    "click==8.3.0",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fastapi==0.120.4",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",

    # ← Jupyter 系は dev に退避推奨（下の optional-dependencies 参照）
    # "ipykernel==7.1.0",
    # "ipython==9.6.0",
    # "ipython-pygments-lexers==1.1.1",
    # "jedi==0.19.2",
    # "jupyter-client==8.6.3",
    # "jupyter-core==5.9.1",
    # "matplotlib-inline==0.2.1",
    # "nest-asyncio==1.6.0",

    "packaging==25.0",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pip==25.3",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",

    # mac専用（PyObjC）— Pi では入らない
    "pyobjc-core==12.0; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa==12.0; sys_platform == 'darwin'",
    "pyobjc-framework-corebluetooth==12.0; sys_platform == 'darwin'",
    "pyobjc-framework-libdispatch==12.0; sys_platform == 'darwin'",

    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",

    # ← Jupyter 系は dev に退避推奨
    # "pyzmq==27.1.0",

    "setuptools==69.5.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.49.1",
    "toio-py==1.1.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",

    # 失敗したら dev/optional に逃すかコメントアウト
    "uvloop==0.22.1",

    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel==7.1.0",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "pyzmq==27.1.0",
]
